[metadata]
name = pysand
version = attr: version.__version__
author = Thorjan Knudsvik
author_email = thokn@equinor.com
description =  Sand management related calculations
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/equinor/pysand
project_urls =
    Bug Tracker = https://github.com/equinor/pysand/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
package_dir=
    = pysand
    # directory containing all the packages
python_requires = >=3.6
install_requires = 
    pandas
    scipy
    numpy >=1.17

[options.packages.find]
where = pysand